# ppd

./: .gitignore  Performance.md  PolynomialMultiplicationMPI  Syncronization.md  lab1.cpp  lab1_coarse.cpp  lab1_finer.cpp  mpi_brute  mpi_karatsuba
lab1/: Performance.md  lab1.cpp
lab2/: lab2  lab2.cpp
lab3/src/: Main.java
lab4/: AsyncAwaitMechanism.cs  DirectCallbacks.cs  TasksMechanism.cs
lab5/src/: KaratsubaMultiplication.java  Main.java  Polynomial.java  RegularMultiplication.java
lab6/src/: Documentation.md  Graph.java  HamiltonianCycleFinder.java  Main.java
lab7/: PolynomialMultiplicationMPI.cpp  docs.md  mpi_brute  mpi_brute.cpp  mpi_karatsuba  mpi_karatsuba.cpp  output.txt
lab8/: CMakeLists.txt  DistributedSharedMemory.cpp  DistributedSharedMemory.h  Message.h  MessageTypes.h  Variable.cpp  Variable.h  dsm  dsm.cpp  globals.h  main.cpp  mpi_comms.cpp  mpi_comms.h  utils.h
project/: hough_visual  hough_visual.cpp
